--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,21 @@
 # Increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+
 # Mod Properties
 mod_id=carpetskyadditions
 mod_name=Carpet Sky Additions
-mod_version=4.1.0
 archives_base_name=carpetskyadditions
 datapack_name=skyblock
+
+# Mod version
+mod_version=4.1.0
+
 # Fabric Properties
 # see https://fabricmc.net/develop/
-minecraft_version=1.19
-yarn_mappings=1.19+build.2
-loader_version=0.14.7
-fabric_api_version=0.55.3+1.19
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.1
+loader_version=0.14.9
+fabric_api_version=0.59.0+1.19.2
+
 # see https://masa.dy.fi/maven/carpet/fabric-carpet/
-carpet_core_version=1.19-1.4.79+v220607
+carpet_core_version=1.19.1-1.4.83+v220727
